--- a/style.css
+++ b/style.css
@@ -1,26 +1,44 @@
 header,section,footer{
   padding:2%;
 }
-
+body{
+  text-align:center;
+}
 header,footer{
-  background:black;
-  color:white;
+text-align:center;
 }
 
 
 
 footer{
   text-align:center;
-  position: absolute;
-right: 0;
-bottom: 0;
-left: 0;
+  position:absolute;
+  right:0;
+  left:0;
+  bottom:0;
 }
 
-.row{
+
+input{
   text-align:center;
-  background:#999999;
-  border:black solid 2px;
-  margin:1% 0;
-  height:5vh;
+}
+
+#content{
+  display:block;
+  margin:0 auto;
+  text-align:center;
+}
+table{
+  background:white;
+  margin:0 auto;
+  width:50%;
+  align-items:center;
+}
+table,th,td{
+border: 1px solid black;
+text-align:center;
+}
+
+ th,td{
+  width:30%;
 }
